# hunterxhunter

./: .gitignore
SuiVersionControl/: Move.toml
SuiVersionControl/sources/: simple_test.move  versioncontrol.move  walrus_repo.move
SuiVersionControl/tests/: versioncontrol_tests.move
hunter/: gumtree_analyzer.py  sample2.py  simple_ast.py
hunter/scripts/: sample1.py
hunter/scripts/logics/: file_hasher.py  reinforest.py
hunter/web-app/: .gitignore  package-lock.json  package.json
hunter/web-app/src/app/: page.tsx
hunter/web-app/src/components/: ast-verification.tsx  project-details-modal.tsx  project-search.tsx
walrus/: .walrusignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  example_usage.py  install.sh  pyproject.toml  reinstall_test.sh  requirements.txt  setup.py  start_web.bat  start_web.sh  test_walrus_cli.py  walrus.bat  walrus_cli.py  web_requirements.txt  web_server.py
walrus/.walrus/: metadata.json
walrus/publisher/: README.md  publisher_setup.py  quick_start.py  requirements.txt  walrus-publisher.service
walrus/publisher/sub-wallets/: sui_0.aliases  sui_0.keystore  sui_1.aliases  sui_1.keystore  sui_2.aliases  sui_2.keystore  sui_3.aliases  sui_3.keystore  sui_4.aliases  sui_4.keystore  sui_5.aliases  sui_5.keystore  sui_client_0.yaml  sui_client_1.yaml  sui_client_2.yaml  sui_client_3.yaml  sui_client_4.yaml  sui_client_5.yaml
walrus/static/css/: github.css
walrus/static/js/: main.js
walrus/templates/: base.html  file.html  index.html  repository.html
walrus/walrus_git_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
